--- a/src/app/components/mainContainer/mainContainer.component.html
+++ b/src/app/components/mainContainer/mainContainer.component.html
@@ -6,6 +6,6 @@
             {{band.name}}
         </band-card>
     </div>
-    <video-player [selectedBandInput]="selectedBand" [selectedVideoUrl]="videoUrl"  *ngIf="selectedBand"></video-player>
+    <video-player [selectedBandInput]="selectedBand" [selectedVideoRating]="videoRating"  *ngIf="selectedBand"></video-player>
     <!--<bottom-footer></bottom-footer>-->
 </div>
