--- a/src/app/components/header/topHeader.component.css
+++ b/src/app/components/header/topHeader.component.css
@@ -3,7 +3,45 @@
     /* border: 1px solid blue;*/   
 }
 
-h1{
-    font-size: 45px;
-    margin-left: 20px;
+h1
+{
+  font-size: 1.9em;
+  font-weight: 100;
+  margin: 0 0 0 0;
+  color: white;
+  width: 20%;
+}
+
+header
+{
+  display: flex;
+  align-items: center;
+  background-color: #ee6e73;
+}
+
+nav
+{
+  font-size: 1.9em;
+  font-weight: 100;
+  border: none;
+  box-shadow: none;
+}
+
+nav a
+{
+  margin-right: 10px;
+  display: inline-block;
+}
+
+nav a.active
+{
+  text-decoration: underline;
+}
+
+.profile{
+  width:10%;
+  margin-right: 20px;
+  font-size: 1.9em;
+  font-weight: 100;
+  color: white;
 }
